--- a/app.ui
+++ b/app.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>579</width>
-    <height>493</height>
+    <width>959</width>
+    <height>634</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="font">
    <font>
@@ -20,40 +26,96 @@
    <string>SIGVIEW</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="app.qrc">
+   <iconset>
     <normaloff>:/newPrefix/sig.png</normaloff>:/newPrefix/sig.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QMdiArea" name="mdiArea">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>16777215</width>
-      <height>16777215</height>
+      <x>20</x>
+      <y>20</y>
+      <width>920</width>
+      <height>510</height>
      </rect>
     </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::NoFrame</enum>
-    </property>
-    <property name="sizeAdjustPolicy">
-     <enum>QAbstractScrollArea::AdjustToContents</enum>
-    </property>
-    <property name="activationOrder">
-     <enum>QMdiArea::ActivationHistoryOrder</enum>
-    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <property name="spacing">
+      <number>20</number>
+     </property>
+     <property name="leftMargin">
+      <number>10</number>
+     </property>
+     <property name="topMargin">
+      <number>10</number>
+     </property>
+     <property name="rightMargin">
+      <number>10</number>
+     </property>
+     <property name="bottomMargin">
+      <number>10</number>
+     </property>
+     <item>
+      <widget class="PLotWidget1" name="plot1" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>900</width>
+         <height>150</height>
+        </size>
+       </property>
+       <property name="cursor">
+        <cursorShape>CrossCursor</cursorShape>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="PlotWidget2" name="plot2" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>900</width>
+         <height>150</height>
+        </size>
+       </property>
+       <property name="cursor">
+        <cursorShape>CrossCursor</cursorShape>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="PlotWidget3" name="plot3" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>900</width>
+         <height>150</height>
+        </size>
+       </property>
+       <property name="cursor">
+        <cursorShape>CrossCursor</cursorShape>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -61,8 +123,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>579</width>
-     <height>21</height>
+     <width>959</width>
+     <height>26</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -85,7 +147,7 @@ border-bottom: 1px solid #888888;
     </property>
     <addaction name="actionOpen"/>
     <addaction name="separator"/>
-    <addaction name="actionSave_as"/>
+    <addaction name="actionSave_Report"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
@@ -93,8 +155,18 @@ border-bottom: 1px solid #888888;
     <property name="title">
      <string>Edit</string>
     </property>
-    <addaction name="actionZoomIn"/>
-    <addaction name="actionZoomOut"/>
+    <widget class="QMenu" name="menuSelect_Signal">
+     <property name="title">
+      <string>Select Signal</string>
+     </property>
+     <addaction name="actionSignal_1"/>
+     <addaction name="actionSignal_2"/>
+     <addaction name="actionSignal_3"/>
+    </widget>
+    <addaction name="menuSelect_Signal"/>
+    <addaction name="separator"/>
+    <addaction name="actionZoom_In"/>
+    <addaction name="actionZoom_Out"/>
    </widget>
    <widget class="QMenu" name="menuPlay_navigate">
     <property name="title">
@@ -103,9 +175,7 @@ border-bottom: 1px solid #888888;
     <addaction name="actionBack"/>
     <addaction name="actionNext"/>
     <addaction name="separator"/>
-    <addaction name="actionPlay"/>
-    <addaction name="separator"/>
-    <addaction name="actionPause"/>
+    <addaction name="actionPlay_Stop"/>
    </widget>
    <widget class="QMenu" name="menuInstruments_markers">
     <property name="title">
@@ -163,22 +233,25 @@ padding: 0px;
     <bool>false</bool>
    </attribute>
    <addaction name="actionOpen"/>
-   <addaction name="actionSave_as"/>
+   <addaction name="actionSave_Report"/>
    <addaction name="separator"/>
-   <addaction name="actionZoomIn"/>
-   <addaction name="actionZoomOut"/>
+   <addaction name="actionZoom_Out"/>
    <addaction name="separator"/>
+   <addaction name="actionZoom_In"/>
    <addaction name="actionBack"/>
-   <addaction name="actionPlay"/>
+   <addaction name="actionPlay_Stop"/>
    <addaction name="actionNext"/>
    <addaction name="actionPause"/>
    <addaction name="separator"/>
    <addaction name="actionSpectrogram"/>
   </widget>
   <action name="actionOpen">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="icon">
-    <iconset resource="app.qrc">
-     <normaloff>:/newPrefix/open.png</normaloff>:/newPrefix/open.png</iconset>
+    <iconset>
+     <normaloff>png/open.png</normaloff>png/open.png</iconset>
    </property>
    <property name="text">
     <string>Open signal...</string>
@@ -190,31 +263,34 @@ padding: 0px;
     <string>Ctrl+O</string>
    </property>
   </action>
-  <action name="actionPlay">
+  <action name="actionPlay_Stop">
    <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="enabled">
     <bool>false</bool>
    </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="icon">
-    <iconset resource="app.qrc">
-     <normaloff>:/newPrefix/play.png</normaloff>:/newPrefix/play.png</iconset>
+    <iconset>
+     <normaloff>png/play.png</normaloff>png/play.png</iconset>
    </property>
    <property name="text">
-    <string>Play signal (no sound)</string>
+    <string>Play/Stop</string>
    </property>
    <property name="shortcut">
     <string>F5</string>
    </property>
   </action>
   <action name="actionPause">
-   <property name="enabled">
+   <property name="checkable">
     <bool>false</bool>
    </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="icon">
-    <iconset resource="app.qrc">
-     <normaloff>:/newPrefix/stop.png</normaloff>:/newPrefix/stop.png</iconset>
+    <iconset>
+     <normaloff>png/stop.png</normaloff>png/stop.png</iconset>
    </property>
    <property name="text">
     <string>Stop playing</string>
@@ -227,12 +303,15 @@ padding: 0px;
    </property>
   </action>
   <action name="actionBack">
-   <property name="enabled">
+   <property name="checkable">
     <bool>false</bool>
    </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="icon">
-    <iconset resource="app.qrc">
-     <normaloff>:/newPrefix/back.png</normaloff>:/newPrefix/back.png</iconset>
+    <iconset>
+     <normaloff>png/back.png</normaloff>png/back.png</iconset>
    </property>
    <property name="text">
     <string>&lt;&lt; Signal beginning</string>
@@ -242,12 +321,15 @@ padding: 0px;
    </property>
   </action>
   <action name="actionNext">
-   <property name="enabled">
+   <property name="checkable">
     <bool>false</bool>
    </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="icon">
-    <iconset resource="app.qrc">
-     <normaloff>:/newPrefix/next.png</normaloff>:/newPrefix/next.png</iconset>
+    <iconset>
+     <normaloff>png/next.png</normaloff>png/next.png</iconset>
    </property>
    <property name="text">
     <string>Signal end &gt;&gt;</string>
@@ -256,13 +338,16 @@ padding: 0px;
     <string>End</string>
    </property>
   </action>
-  <action name="actionZoomIn">
-   <property name="enabled">
+  <action name="actionZoom_In">
+   <property name="checkable">
     <bool>false</bool>
    </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="icon">
-    <iconset resource="app.qrc">
-     <normaloff>:/newPrefix/zoom in.png</normaloff>:/newPrefix/zoom in.png</iconset>
+    <iconset>
+     <normaloff>png/zoom in.png</normaloff>png/zoom in.png</iconset>
    </property>
    <property name="text">
     <string>Zoom In</string>
@@ -274,13 +359,16 @@ padding: 0px;
     <string>Ctrl+Up</string>
    </property>
   </action>
-  <action name="actionZoomOut">
-   <property name="enabled">
+  <action name="actionZoom_Out">
+   <property name="checkable">
     <bool>false</bool>
    </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="icon">
-    <iconset resource="app.qrc">
-     <normaloff>:/newPrefix/zoom out.png</normaloff>:/newPrefix/zoom out.png</iconset>
+    <iconset>
+     <normaloff>png/zoom out.png</normaloff>png/zoom out.png</iconset>
    </property>
    <property name="text">
     <string>Zoom Out</string>
@@ -293,12 +381,15 @@ padding: 0px;
    </property>
   </action>
   <action name="actionSpectrogram">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="app.qrc">
-     <normaloff>:/newPrefix/spectr.png</normaloff>:/newPrefix/spectr.png</iconset>
+    <iconset>
+     <normaloff>png/spectr.png</normaloff>png/spectr.png</iconset>
    </property>
    <property name="text">
     <string>FFT Spectrum analysis</string>
@@ -310,22 +401,32 @@ padding: 0px;
     <string>Ctrl+F</string>
    </property>
   </action>
-  <action name="actionSave_as">
-   <property name="enabled">
+  <action name="actionSave_Report">
+   <property name="checkable">
     <bool>false</bool>
    </property>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="icon">
-    <iconset resource="app.qrc">
-     <normaloff>:/newPrefix/save.png</normaloff>:/newPrefix/save.png</iconset>
+    <iconset>
+     <normaloff>png/save.png</normaloff>png/save.png</iconset>
    </property>
    <property name="text">
-    <string>Save signal as...</string>
+    <string>Save Report</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionExit">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>png/sig.png</normaloff>png/sig.png</iconset>
+   </property>
    <property name="text">
     <string>Exit</string>
    </property>
@@ -333,25 +434,63 @@ padding: 0px;
     <string>Ctrl+F4</string>
    </property>
   </action>
-  <action name="actionPlay_as_fast_as_possible_2">
+  <action name="actionSignal_1">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>png/1.png</normaloff>png/1.png</iconset>
+   </property>
    <property name="text">
-    <string>Play as fast as possible</string>
+    <string>Signal 1</string>
    </property>
   </action>
-  <action name="actionRepeat_forever_play_in_loop">
-   <property name="text">
-    <string>Repeat forever (play in loop)</string>
+  <action name="actionSignal_2">
+   <property name="checkable">
+    <bool>true</bool>
    </property>
-   <property name="statusTip">
-    <string>Start playing signal from the beginning each time its end has been reached</string>
+   <property name="icon">
+    <iconset>
+     <normaloff>png/2.png</normaloff>png/2.png</iconset>
+   </property>
+   <property name="text">
+    <string>Signal 2</string>
    </property>
   </action>
-  <action name="actionPlay_as_fast_as_possible">
+  <action name="actionSignal_3">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>png/3.png</normaloff>png/3.png</iconset>
+   </property>
    <property name="text">
-    <string>Play as fast as possible</string>
+    <string>Signal 3</string>
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>PLotWidget1</class>
+   <extends>QWidget</extends>
+   <header>pyqtgraph</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>PlotWidget2</class>
+   <extends>QWidget</extends>
+   <header>pyqtgraph</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>PlotWidget3</class>
+   <extends>QWidget</extends>
+   <header>pyqtgraph</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="app.qrc"/>
  </resources>
